1. 多語系 2. 修改submit button 3. 修改lang dropdown button

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,4 +1,12 @@
 {
+  "oqc_report": "OQC Report",
+  "software_version": "Software Version",
+  "appearance_structure_inspection": "Appearance & Structure Inspection",
+  "input_output_characteristics": "Input & Output Characteristics",
+  "basic_function_test": "Basic Function Test",
+  "protection_function_test": "Protection Function Test",
+  "package_list": "Package List",
+  "attachment": "Attachment",
   "packagingItem1": "RFID Card",
   "packagingItem2": "Product Certificate Card",
   "packagingItem3": "Screw Assy M4*12",
