--- a/assets/translations/zh-CN.json
+++ b/assets/translations/zh-CN.json
@@ -11,5 +11,7 @@
   "packagingItem2": "產品認證卡",
   "packagingItem3": "螺絲組件 M4*12",
   "packagingItem4": "螺栓蓋",
-  "packagingItem5": "使用手冊"
+  "packagingItem5": "使用手冊",
+  "input_sn_model": "輸入SN機種",
+  "qr_code_scan": "QR code掃描"
 }
