1. change pdf font size and lang

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -7,11 +7,11 @@
   "protection_function_test": "Protection Function Test",
   "package_list": "Package List",
   "attachment": "Attachment",
-  "packagingItem1": "RFID Card",
-  "packagingItem2": "Product Certificate Card",
-  "packagingItem3": "Screw Assy M4*12",
-  "packagingItem4": "Bolt Cover",
-  "packagingItem5": "User Manual",
+  "rfid_card": "RFID Card",
+  "certificate_card": "Product Certificate Card",
+  "bolts_cover": "Screw Assy M4*12",
+  "cabinet_key": "Bolt Cover",
+  "ac_breaker_key": "User Manual",
   "input_sn_model": "Input SN Model",
   "qr_code_scan": "QR Code Scan",
   "open_camera": "Open Camera",
