--- a/assets/translations/ja-JP.json
+++ b/assets/translations/ja-JP.json
@@ -7,11 +7,11 @@
   "protection_function_test": "保護機能テスト",
   "package_list": "パッケージリスト",
   "attachment": "添付資料",
-  "packagingItem1": "RFIDカード",
-  "packagingItem2": "製品認証カード",
-  "packagingItem3": "ネジ組立 M4*12",
-  "packagingItem4": "ボルトカバー",
-  "packagingItem5": "ユーザーマニュアル",
+  "rfid_card": "RFIDカード",
+  "certificate_card": "製品認証カード",
+  "bolts_cover": "ネジ組立 M4*12",
+  "cabinet_key": "ボルトカバー",
+  "ac_breaker_key": "ユーザーマニュアル",
   "input_sn_model": "SNモデルを入力",
   "qr_code_scan": "QRコードスキャン",
   "open_camera": "カメラを開く",
