--- a/assets/translations/vi-VN.json
+++ b/assets/translations/vi-VN.json
@@ -7,11 +7,11 @@
   "protection_function_test": "Kiểm tra chức năng bảo vệ",
   "package_list": "Danh sách đóng gói",
   "attachment": "Tài liệu đính kèm",
-  "packagingItem1": "Thẻ RFID",
-  "packagingItem2": "Thẻ chứng nhận sản phẩm",
-  "packagingItem3": "Bộ vít M4*12",
-  "packagingItem4": "Nắp bu lông",
-  "packagingItem5": "Hướng dẫn sử dụng",
+  "rfid_card": "Thẻ RFID",
+  "certificate_card": "Thẻ chứng nhận sản phẩm",
+  "bolts_cover": "Bộ vít M4*12",
+  "cabinet_key": "Nắp bu lông",
+  "ac_breaker_key": "Hướng dẫn sử dụng",
   "input_sn_model": "Nhập Model SN",
   "qr_code_scan": "Quét mã QR",
   "open_camera": "Mở máy ảnh",
