--- a/assets/translations/zh-TW.json
+++ b/assets/translations/zh-TW.json
@@ -6,7 +6,8 @@
   "please_input_sn": "請輸入序號",
   "cancel": "取消",
   "submit": "提交",
-  "submit_success": "序號: {0}, 型號: {1} 已提交",
+  "submit_success": "序號: {}, 型號: {} 已提交",
+  "submit_fail": "序號: {}, 型號: {} 提交失敗",
   "oqc_report": "出廠品質檢驗報告",
   "software_version": "軟體版本",
   "appearance_structure_inspection": "外觀及結構檢查",
