--- a/assets/translations/ja-JP.json
+++ b/assets/translations/ja-JP.json
@@ -1,14 +1,14 @@
 {
   "oqc_report": "出荷品質検査報告書",
   "software_version": "ソフトウェアバージョン",
-  "appearance_structure_inspection": "外観・構造検査",
+  "appearance_structure_inspection": "外観および構造検査",
   "input_output_characteristics": "入出力特性",
   "basic_function_test": "基本機能テスト",
   "protection_function_test": "保護機能テスト",
-  "package_list": "パッケージリスト",
+  "package_list": "梱包リスト",
   "attachment": "添付資料",
   
-  "input_sn_model": "SNモデルを入力",
+  "input_sn_model": "SNモデル入力",
   "qr_code_scan": "QRコードスキャン",
   "open_camera": "カメラを開く",
   "model_name": "モデル名",
@@ -17,10 +17,13 @@
   "please_input_sn": "シリアル番号を入力してください",
   "cancel": "キャンセル",
   "submit": "送信",
-  "submit_success": "SN: {}、モデル: {} が送信されました",
-  "submit_fail": "SN: {}、モデル: {} の送信に失敗しました",
-  "rfid_card": "RFID カード", 
+  "exit": "終了",
+  "exit_confirm_title": "終了確認",
+  "exit_confirm_message": "アプリケーションを終了してもよろしいですか？",
+  "submit_success": "SN: {}, モデル: {} が送信されました",
+  "submit_fail": "SN: {}, モデル: {} の送信に失敗しました",
   "certificate_card": "認証カード",
+  "rfid_card": "RFIDカード",
   "bolts_cover": "ボルトカバー",
   "cabinet_key": "鍵",
   "ac_breaker_key": "AC Breaker's key",
