--- a/assets/translations/vi-VN.json
+++ b/assets/translations/vi-VN.json
@@ -17,6 +17,9 @@
   "please_input_sn": "Vui lòng nhập số sê-ri",
   "cancel": "Hủy",
   "submit": "Gửi",
+  "exit": "Thoát",
+  "exit_confirm_title": "Xác nhận thoát",
+  "exit_confirm_message": "Bạn có chắc chắn muốn thoát khỏi ứng dụng không?",
   "submit_success": "SN: {}, Model: {} đã được gửi",
   "submit_fail": "SN: {}, Model: {} gửi thất bại",
   "certificate_card": "Thẻ chứng nhận",
