--- a/assets/translations/zh-TW.json
+++ b/assets/translations/zh-TW.json
@@ -6,6 +6,9 @@
   "please_input_sn": "請輸入序號",
   "cancel": "取消",
   "submit": "提交",
+  "exit": "離開",
+  "exit_confirm_title": "確認離開",
+  "exit_confirm_message": "確定要離開應用程式嗎？",
   "submit_success": "序號: {}, 型號: {} 已提交",
   "submit_fail": "序號: {}, 型號: {} 提交失敗",
   "oqc_report": "出廠品質檢驗報告",
