--- a/assets/translations/ja-JP.json
+++ b/assets/translations/ja-JP.json
@@ -25,7 +25,16 @@
   "certificate_card": "認証カード",
   "rfid_card": "RFIDカード",
   "bolts_cover": "ボルトカバー",
-  "cabinet_key": "鍵",
-  "ac_breaker_key": "AC Breaker's key",
-  "other": "その他"
+  "cabinet_key": "キャビネットキー",
+  "other": "その他",
+  "camera": "カメラ",
+  "recheck_cameras": "利用可能なカメラを再確認",
+  "select_image": "画像を選択",
+  "take_photo": "写真を撮る",
+  "next_photo": "次の写真",
+  "browse_photos": "写真を閲覧",
+  "images_saved": "選択した画像が保存されました！",
+  "select_multiple_images": "複数の画像を選択",
+  "no_images_found": "指定されたディレクトリに画像が見つかりません。",
+  "save_selected_images": "選択した画像を保存"
 }
