--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,13 +1,17 @@
 {
   "oqc_report": "OQC Report",
+  "basic_info": "Basic Information",
+  "psu_sn": "PSU S/N",
   "software_version": "Software Version",
   "appearance_structure_inspection": "Appearance & Structure Inspection",
   "input_output_characteristics": "Input & Output Characteristics",
   "basic_function_test": "Basic Function Test",
   "protection_function_test": "Protection Function Test",
+  "hipot_test": "Hi-pot Test",
   "package_list": "Package List",
   "attachment": "Attachment",
   "exit": "Exit",
+  "close": "Close",
   "exit_confirm_title": "Confirm Exit",
   "exit_confirm_message": "Are you sure you want to exit the application?",
   "input_sn_model": "Input SN Model",
@@ -21,10 +25,11 @@
   "submit": "Submit",
   "submit_success": "SN: {}, Model: {} submitted",
   "submit_fail": "SN: {}, Model: {} submission failed",
-  "certificate_card": "Certificate Card",
   "rfid_card": "RFID Card",
+  "product_certificate_card": "Product Certificate Card",
+  "screw_assy_m4_12": "Screw Assy M4*12",
   "bolts_cover": "Bolts Cover",
-  "cabinet_key": "Cabinet's key",
+  "user_manual": "User Manual",
   "other": "Other",
   "camera": "Camera",
   "recheck_cameras": "Re-check available cameras",
@@ -35,5 +40,19 @@
   "images_saved": "Selected images have been saved!",
   "select_multiple_images": "Select Multiple Images",
   "no_images_found": "No images found in the specified directory.",
-  "save_selected_images": "Save Selected Images"
+  "save_selected_images": "Save Selected Images",
+  "signature": "Signature",
+  "name": "Name :",
+  "date": "date : ",
+  "packageing_photo": "Packageing Photo ",
+  "appearance_photo": "Appearance Photo ",
+  "oqc_report": "OQC Report ",
+  "initializing": "Initializing...",
+  "upload_progress": "Upload Progress:",
+  "upload_complete": "Upload Complete！",
+  "download_complete": "Download Complete！",
+  "uploading_file": "Uploading file...",
+  "downloading_file": "Downloading file...",
+  "processing": "Processing...",
+  "qrcode_back": "Return"
 }
