--- a/assets/translations/ja-JP.json
+++ b/assets/translations/ja-JP.json
@@ -1,13 +1,15 @@
 {
   "oqc_report": "出荷品質検査報告書",
+  "basic_info": "基本情報",
+  "psu_sn": "電源",
   "software_version": "ソフトウェアバージョン",
   "appearance_structure_inspection": "外観および構造検査",
   "input_output_characteristics": "入出力特性",
   "basic_function_test": "基本機能テスト",
   "protection_function_test": "保護機能テスト",
+  "hipot_test": "耐電圧試験",
   "package_list": "梱包リスト",
   "attachment": "添付資料",
-  
   "input_sn_model": "SNモデル入力",
   "qr_code_scan": "QRコードスキャン",
   "open_camera": "カメラを開く",
@@ -18,14 +20,16 @@
   "cancel": "キャンセル",
   "submit": "送信",
   "exit": "終了",
+  "close": "閉じる",
   "exit_confirm_title": "終了確認",
   "exit_confirm_message": "アプリケーションを終了してもよろしいですか？",
   "submit_success": "SN: {}, モデル: {} が送信されました",
   "submit_fail": "SN: {}, モデル: {} の送信に失敗しました",
-  "certificate_card": "認証カード",
   "rfid_card": "RFIDカード",
+  "product_certificate_card": "製品認証カード",
+  "screw_assy_m4_12": "ネジ　M4*12",
   "bolts_cover": "ボルトカバー",
-  "cabinet_key": "キャビネットキー",
+  "user_manual": "ユーザーマニュアル",
   "other": "その他",
   "camera": "カメラ",
   "recheck_cameras": "利用可能なカメラを再確認",
@@ -36,5 +40,19 @@
   "images_saved": "選択した画像が保存されました！",
   "select_multiple_images": "複数の画像を選択",
   "no_images_found": "指定されたディレクトリに画像が見つかりません。",
-  "save_selected_images": "選択した画像を保存"
+  "save_selected_images": "選択した画像を保存",
+  "signature": "サイン",
+  "name": "名前 :",
+  "date": "日付 :",
+  "packageing_photo": "アクセサリーパックの写真 ",
+  "appearance_photo": "外観検査の写真 ",
+  "oqc_report": "OQCレポート ",
+  "initializing": "初期化...",
+  "upload_progress": "アップロード進捗:",
+  "upload_complete": "アップロード完了！",
+  "download_complete": "ダウンロード完了！",
+  "uploading_file": "ファイルをアップロード中...",
+  "downloading_file": "ファイルをダウンロード中...",
+  "processing": "処理中...",
+  "qrcode_back": "戻る"
 }
