--- a/assets/translations/vi-VN.json
+++ b/assets/translations/vi-VN.json
@@ -1,13 +1,15 @@
 {
   "oqc_report": "Báo cáo kiểm tra chất lượng xuất xưởng",
+  "basic_info": "Thông tin cơ bản",
+  "psu_sn": "Nguồn điện",
   "software_version": "Phiên bản phần mềm",
   "appearance_structure_inspection": "Kiểm tra ngoại quan và cấu trúc",
   "input_output_characteristics": "Đặc tính đầu vào và đầu ra",
   "basic_function_test": "Kiểm tra chức năng cơ bản",
   "protection_function_test": "Kiểm tra chức năng bảo vệ",
+  "hipot_test": "Kiểm tra điện áp cao",
   "package_list": "Danh sách đóng gói",
   "attachment": "Tài liệu đính kèm",
-
   "input_sn_model": "Nhập Model SN",
   "qr_code_scan": "Quét mã QR",
   "open_camera": "Mở máy ảnh",
@@ -18,14 +20,16 @@
   "cancel": "Hủy",
   "submit": "Gửi",
   "exit": "Thoát",
+  "close": "Đóng",
   "exit_confirm_title": "Xác nhận thoát",
   "exit_confirm_message": "Bạn có chắc chắn muốn thoát khỏi ứng dụng không?",
   "submit_success": "SN: {}, Model: {} đã được gửi",
   "submit_fail": "SN: {}, Model: {} gửi thất bại",
-  "certificate_card": "Thẻ chứng nhận",
   "rfid_card": "Thẻ RFID",
-  "bolts_cover": "Ốc vít",
-  "cabinet_key": "Chìa khoá tủ máy",
+  "product_certificate_card": "Thẻ chứng nhận sản phẩm",
+  "screw_assy_m4_12": "Bộ phận vít M4*12",
+  "bolts_cover": "Nắp bu lông",
+  "user_manual": "Hướng dẫn sử dụng",
   "other": "Khác",
   "camera": "Máy ảnh",
   "recheck_cameras": "Kiểm tra lại máy ảnh có sẵn",
@@ -36,5 +40,19 @@
   "images_saved": "Đã lưu các ảnh đã chọn!",
   "select_multiple_images": "Chọn nhiều ảnh",
   "no_images_found": "Không tìm thấy ảnh trong thư mục đã chỉ định.",
-  "save_selected_images": "Lưu ảnh đã chọn"
+  "save_selected_images": "Lưu ảnh đã chọn",
+  "signature": "chữ ký",
+  "name": "tên :",
+  "date": "ngày :",
+  "packageing_photo": "Ảnh bộ phụ kiện ",
+  "appearance_photo": "Ảnh kiểm tra ngoại quan ",
+  "oqc_report": "Báo cáo OQC ",
+  "initializing": "Khởi tạo...",
+  "upload_progress": "Tiến độ tải lên:",
+  "upload_complete": "Tải lên hoàn tất！",
+  "download_complete": "Tải xuống hoàn tất！",
+  "uploading_file": "Đang tải lên tệp...",
+  "downloading_file": "Đang tải xuống tệp...",
+  "processing": "Đang xử lý...",
+  "qrcode_back": "trở lại"
 }
