--- a/assets/translations/zh-TW.json
+++ b/assets/translations/zh-TW.json
@@ -1,5 +1,20 @@
 {
+  "basic_info": "基本資訊",
+  "oqc_report": "出廠品質檢驗報告",
+  "psu_sn": "電源供應器",
+  "software_version": "軟體版本",
+  "appearance_structure_inspection": "外觀及結構檢查",
+  "input_output_characteristics": "輸入輸出特性",
+  "basic_function_test": "基本功能測試",
+  "protection_function_test": "保護功能測試",
+  "hipot_test": "耐壓測試",
+  "package_list": "配件包",
+  "attachment": "外觀檢查",
   "open_camera": "開啟相機",
+  "please_input_account": "請輸入帳號",
+  "account": "帳號",
+  "please_input_pwd": "請輸入密碼",
+  "pwd": "密碼",
   "model_name": "型號名稱",
   "please_input_model_name": "請輸入型號名稱",
   "sn": "序號",
@@ -7,24 +22,19 @@
   "cancel": "取消",
   "submit": "提交",
   "exit": "離開",
+  "close": "關閉",
   "exit_confirm_title": "確認離開",
   "exit_confirm_message": "確定要離開應用程式嗎？",
   "submit_success": "序號: {}, 型號: {} 已提交",
   "submit_fail": "序號: {}, 型號: {} 提交失敗",
-  "oqc_report": "出廠品質檢驗報告",
-  "software_version": "軟體版本",
-  "appearance_structure_inspection": "外觀及結構檢查",
-  "input_output_characteristics": "輸入輸出特性",
-  "basic_function_test": "基本功能測試",
-  "protection_function_test": "保護功能測試",
-  "package_list": "包裝清單",
-  "attachment": "附件",
+  "input_account_password": "輸入帳號密碼",
   "input_sn_model": "輸入SN機種",
   "qr_code_scan": "QR code掃描",
-  "certificate_card": "認證卡",
   "rfid_card": "RFID卡",
-  "bolts_cover": "螺母",
-  "cabinet_key": "機櫃鑰匙",
+  "product_certificate_card": "產品驗證卡",
+  "screw_assy_m4_12": "螺絲組件 M4*12",
+  "bolts_cover": "螺栓蓋",
+  "user_manual": "用戶手冊",
   "other": "其他",
   "camera": "相機",
   "recheck_cameras": "重新檢查可用相機",
@@ -35,5 +45,19 @@
   "images_saved": "已儲存所選圖片！",
   "select_multiple_images": "選擇多張圖片",
   "no_images_found": "在指定目錄中找不到圖片。",
-  "save_selected_images": "儲存所選圖片"
+  "save_selected_images": "儲存所選圖片",
+  "signature": "簽名",
+  "name": "姓名 : ",
+  "date": "日期 : ",
+  "packageing_photo": "配件包照片 ",
+  "appearance_photo": "外觀檢查照片 ",
+  "oqc_report": "OQC 報告 ",
+  "initializing": "初始化中...",
+  "upload_progress": "上傳進度:",
+  "upload_complete": "上傳完成！",
+  "download_complete": "下載完成！",
+  "uploading_file": "檔案上傳中...",
+  "downloading_file": "檔案下載中...",
+  "processing": "處理中...",
+  "qrcode_back": "返回"
 } 
