修改Judgement判斷邏輯, 修改語言包內容
1. 修改Judgement判斷邏輯
2. 修改語言包內容

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -14,8 +14,8 @@
   "close": "Close",
   "exit_confirm_title": "Confirm Exit",
   "exit_confirm_message": "Are you sure you want to exit the application?",
-  "input_sn_model": "Input SN Model",
-  "qr_code_scan": "QR Code Scan",
+  "input_sn_model": "Input Information",
+  "qr_code_scan": "QR Code",
   "open_camera": "Open Camera",
   "model_name": "Model Name",
   "please_input_model_name": "Please input model name",
