--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -14,6 +14,7 @@
   "close": "Close",
   "exit_confirm_title": "Confirm Exit",
   "exit_confirm_message": "Are you sure you want to exit the application?",
+  "input_account_password": "Permission Management",
   "input_sn_model": "Input Information",
   "qr_code_scan": "QR Code",
   "open_camera": "Open Camera",
