add premisson login toast

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -26,6 +26,9 @@
   "submit": "Submit",
   "submit_success": "SN: {}, Model: {} submitted",
   "submit_fail": "SN: {}, Model: {} submission failed",
+  "login_success_admin": "Login successful. Permission: Administrator",
+  "login_success_operator": "Login successful. Permission: Operator",
+  "login_success_guest": "Login successful. Permission: Guest",
   "rfid_card": "RFID Card",
   "product_certificate_card": "Product Certificate Card",
   "screw_assy_m4_12": "Screw Assy M4*12",
