--- a/assets/translations/vi-VN.json
+++ b/assets/translations/vi-VN.json
@@ -26,6 +26,9 @@
   "exit_confirm_message": "Bạn có chắc chắn muốn thoát khỏi ứng dụng không?",
   "submit_success": "SN: {}, Model: {} đã được gửi",
   "submit_fail": "SN: {}, Model: {} gửi thất bại",
+  "login_success_admin": "Đăng nhập thành công. Quyền: Quản trị viên",
+  "login_success_operator": "Đăng nhập thành công. Quyền: Người vận hành",
+  "login_success_guest": "Đăng nhập thành công. Quyền: Khách",
   "rfid_card": "Thẻ RFID",
   "product_certificate_card": "Thẻ chứng nhận sản phẩm",
   "screw_assy_m4_12": "Bộ phận vít M4*12",
