--- a/assets/translations/vi-VN.json
+++ b/assets/translations/vi-VN.json
@@ -30,11 +30,11 @@
   "login_success_operator": "Đăng nhập thành công. Quyền: Người vận hành",
   "login_success_guest": "Đăng nhập thành công. Quyền: Khách",
   "model_spec_template": "Quản lý mẫu thông số kỹ thuật mô hình",
-  "rfid_card": "Thẻ RFID",
-  "product_certificate_card": "Thẻ chứng nhận sản phẩm",
-  "screw_assy_m4_12": "Bộ phận vít M4*12",
-  "bolts_cover": "Nắp bu lông",
-  "user_manual": "Hướng dẫn sử dụng",
+  "rfid_card": "RFID Card",
+  "product_certificate_card": "Product Certificate Card",
+  "screw_assy_m4_12": "Screw Assy M4*12",
+  "bolts_cover": "Bolts Cover",
+  "user_manual": "User Manual",
   "other": "Khác",
   "camera": "Máy ảnh",
   "recheck_cameras": "Kiểm tra lại máy ảnh có sẵn",
