--- a/assets/translations/ja-JP.json
+++ b/assets/translations/ja-JP.json
@@ -30,11 +30,11 @@
   "login_success_operator": "ログイン成功。権限：オペレーター",
   "login_success_guest": "ログイン成功。権限：ゲスト",
   "model_spec_template": "モデル仕様テンプレート管理",
-  "rfid_card": "RFIDカード",
-  "product_certificate_card": "製品認証カード",
-  "screw_assy_m4_12": "ネジ　M4*12",
-  "bolts_cover": "ボルトカバー",
-  "user_manual": "ユーザーマニュアル",
+  "rfid_card": "RFID Card",
+  "product_certificate_card": "Product Certificate Card",
+  "screw_assy_m4_12": "Screw Assy M4*12",
+  "bolts_cover": "Bolts Cover",
+  "user_manual": "User Manual",
   "other": "その他",
   "camera": "カメラ",
   "recheck_cameras": "利用可能なカメラを再確認",
