--- a/assets/translations/zh-TW.json
+++ b/assets/translations/zh-TW.json
@@ -34,11 +34,11 @@
   "input_account_password": "權限管理",
   "input_sn_model": "輸入SN機種",
   "qr_code_scan": "QR code",
-  "rfid_card": "RFID卡",
-  "product_certificate_card": "產品驗證卡",
-  "screw_assy_m4_12": "螺絲組件 M4*12",
-  "bolts_cover": "螺栓蓋",
-  "user_manual": "用戶手冊",
+  "rfid_card": "RFID Card",
+  "product_certificate_card": "Product Certificate Card",
+  "screw_assy_m4_12": "Screw Assy M4*12",
+  "bolts_cover": "Bolts Cover",
+  "user_manual": "User Manual",
   "other": "其他",
   "camera": "相機",
   "recheck_cameras": "重新檢查可用相機",
