--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -8,16 +8,16 @@
   "basic_function_test": "Basic Function Test",
   "protection_function_test": "Protection Function Test",
   "hipot_test": "Hi-pot Test",
-  "package_list": "Package List",
+  "package_list": "Kit parts",
   "attachment": "Attachment",
   "exit": "Exit",
   "close": "Close",
   "exit_confirm_title": "Confirm Exit",
-  "exit_confirm_message": "Are you sure you want to exit the application?",
-  "input_account_password": "Permission Management",
+  "exit_confirm_message": "Are you sure you want to exit?",
+  "input_account_password": "Log in",
   "input_sn_model": "Input Information",
   "qr_code_scan": "QR Code",
-  "open_camera": "Open Camera",
+  "open_camera": "Camera",
   "model_name": "Model Name",
   "please_input_model_name": "Please input model name",
   "sn": "Serial Number",
@@ -29,13 +29,13 @@
   "login_success_admin": "Login successful. Permission: Administrator",
   "login_success_operator": "Login successful. Permission: Operator",
   "login_success_guest": "Login successful. Permission: Guest",
-  "model_spec_template": "Model Specification Template Management",
+  "model_spec_template": "Model Template Management",
   "rfid_card": "RFID Card",
   "product_certificate_card": "Product Certificate Card",
   "screw_assy_m4_12": "Screw Assy M4*12",
   "bolts_cover": "Bolts Cover",
   "user_manual": "User Manual",
-  "other": "Other",
+  "other": "Others",
   "camera": "Camera",
   "recheck_cameras": "Re-check available cameras",
   "select_image": "Select Image",
@@ -48,14 +48,14 @@
   "save_selected_images": "Save Selected Images",
   "signature": "Signature",
   "name": "Name :",
-  "date": "date : ",
-  "packageing_photo": "Packageing Photo ",
-  "appearance_photo": "Appearance Photo ",
-  "oqc_report": "OQC Report ",
+  "date": "Date : ",
+  "packageing_photo": "Kit Parts Photo",
+  "appearance_photo": "Appearance Photo",
+  "oqc_report": "OQC Report",
   "initializing": "Initializing...",
   "upload_progress": "Upload Progress:",
-  "upload_complete": "Upload Complete！",
-  "download_complete": "Download Complete！",
+  "upload_complete": "Upload Successful！",
+  "download_complete": "Download Successful！",
   "uploading_file": "Uploading file...",
   "downloading_file": "Downloading file...",
   "processing": "Processing...",
