--- a/assets/translations/ja-JP.json
+++ b/assets/translations/ja-JP.json
@@ -11,11 +11,11 @@
   "package_list": "梱包リスト",
   "attachment": "添付資料",
   "input_account_password": "権限管理",
-  "input_sn_model": "SNモデル入力",
+  "input_sn_model": "SN入力",
   "qr_code_scan": "QRコードスキャン",
-  "open_camera": "カメラを開く",
-  "model_name": "モデル名",
-  "please_input_model_name": "モデル名を入力してください",
+  "open_camera": "カメラをオンにする",
+  "model_name": "型番",
+  "please_input_model_name": "型番を入力してください",
   "sn": "シリアル番号",
   "please_input_sn": "シリアル番号を入力してください",
   "cancel": "キャンセル",
@@ -23,13 +23,13 @@
   "exit": "終了",
   "close": "閉じる",
   "exit_confirm_title": "終了確認",
-  "exit_confirm_message": "アプリケーションを終了してもよろしいですか？",
+  "exit_confirm_message": "アプリを終了してよろしいですか？",
   "submit_success": "SN: {}, モデル: {} が送信されました",
-  "submit_fail": "SN: {}, モデル: {} の送信に失敗しました",
+  "submit_fail": "SN: {}, モデル: {} の送信が失敗しました",
   "login_success_admin": "ログイン成功。権限：管理者",
   "login_success_operator": "ログイン成功。権限：オペレーター",
   "login_success_guest": "ログイン成功。権限：ゲスト",
-  "model_spec_template": "モデル仕様テンプレート管理",
+  "model_spec_template": "型番仕様管理",
   "rfid_card": "RFID Card",
   "product_certificate_card": "Product Certificate Card",
   "screw_assy_m4_12": "Screw Assy M4*12",
@@ -49,9 +49,9 @@
   "signature": "サイン",
   "name": "名前 :",
   "date": "日付 :",
-  "packageing_photo": "アクセサリーパックの写真 ",
-  "appearance_photo": "外観検査の写真 ",
-  "oqc_report": "OQCレポート ",
+  "packageing_photo": "梱包リスト写真 ",
+  "appearance_photo": "外観写真 ",
+  "oqc_report": "OQC出荷レポート ",
   "initializing": "初期化...",
   "upload_progress": "アップロード進捗:",
   "upload_complete": "アップロード完了！",
