--- a/assets/translations/zh-TW.json
+++ b/assets/translations/zh-TW.json
@@ -1,7 +1,7 @@
 {
   "basic_info": "基本資訊",
   "oqc_report": "出廠品質檢驗報告",
-  "psu_sn": "電源供應器",
+  "psu_sn": "PSU序號",
   "software_version": "軟體版本",
   "appearance_structure_inspection": "外觀及結構檢查",
   "input_output_characteristics": "輸入輸出特性",
@@ -15,8 +15,8 @@
   "account": "帳號",
   "please_input_pwd": "請輸入密碼",
   "pwd": "密碼",
-  "model_name": "型號名稱",
-  "please_input_model_name": "請輸入型號名稱",
+  "model_name": "機種名稱",
+  "please_input_model_name": "請輸入機種名稱",
   "sn": "序號",
   "please_input_sn": "請輸入序號",
   "cancel": "取消",
@@ -24,16 +24,16 @@
   "exit": "離開",
   "close": "關閉",
   "exit_confirm_title": "確認離開",
-  "exit_confirm_message": "確定要離開應用程式嗎？",
+  "exit_confirm_message": "是否確定離開應用程式？",
   "submit_success": "序號: {}, 型號: {} 已提交",
   "submit_fail": "序號: {}, 型號: {} 提交失敗",
   "login_success_admin": "您已成功登入，權限：管理者",
   "login_success_operator": "您已成功登入，權限：操作員",
   "login_success_guest": "您已成功登入，權限：訪客",
-  "model_spec_template": "模型規格模板管理",
-  "input_account_password": "權限管理",
-  "input_sn_model": "輸入SN機種",
-  "qr_code_scan": "QR code",
+  "model_spec_template": "機種模板管理",
+  "input_account_password": "登入",
+  "input_sn_model": "輸入機種序號",
+  "qr_code_scan": "QR Code",
   "rfid_card": "RFID Card",
   "product_certificate_card": "Product Certificate Card",
   "screw_assy_m4_12": "Screw Assy M4*12",
@@ -42,7 +42,7 @@
   "other": "其他",
   "camera": "相機",
   "recheck_cameras": "重新檢查可用相機",
-  "select_image": "選擇圖片",
+  "select_image": "選擇照片",
   "take_photo": "拍照",
   "next_photo": "下一張照片",
   "browse_photos": "瀏覽照片",
@@ -55,7 +55,7 @@
   "date": "日期 : ",
   "packageing_photo": "配件包照片 ",
   "appearance_photo": "外觀檢查照片 ",
-  "oqc_report": "OQC 報告 ",
+  "oqc_report": "OQC出貨檢驗報告 ",
   "initializing": "初始化中...",
   "upload_progress": "上傳進度:",
   "upload_complete": "上傳完成！",
@@ -67,5 +67,5 @@
   "error": "錯誤",
   "api_error": "API 調用錯誤",
   "unexpected_error": "意外錯誤",
-  "ok": "確定"
+  "ok": "確認"
 } 
