--- a/assets/translations/vi-VN.json
+++ b/assets/translations/vi-VN.json
@@ -42,6 +42,8 @@
   "take_photo": "Chụp ảnh",
   "next_photo": "Ảnh tiếp theo",
   "browse_photos": "Duyệt ảnh",
+  "select_all": "chọn tất cả hình ảnh",
+  "deselect_all": "bỏ chọn tất cả hình ảnh",
   "images_saved": "Đã lưu các ảnh đã chọn!",
   "select_multiple_images": "Chọn nhiều ảnh",
   "no_images_found": "Không tìm thấy ảnh trong thư mục đã chỉ định.",
