--- a/assets/translations/zh-TW.json
+++ b/assets/translations/zh-TW.json
@@ -46,7 +46,9 @@
   "take_photo": "拍照",
   "next_photo": "下一張照片",
   "browse_photos": "瀏覽照片",
-  "images_saved": "已儲存所選圖片！",
+  "select_all": "全選圖片",
+  "deselect_all": "取消全選",
+  "images_saved": "儲存所選圖片！",
   "select_multiple_images": "選擇多張圖片",
   "no_images_found": "在指定目錄中找不到圖片。",
   "save_selected_images": "儲存所選圖片",
