--- a/assets/translations/ja-JP.json
+++ b/assets/translations/ja-JP.json
@@ -42,6 +42,8 @@
   "take_photo": "写真を撮る",
   "next_photo": "次の写真",
   "browse_photos": "写真を閲覧",
+  "select_all": "すべての画像を選択",
+  "deselect_all": "すべての画像の選択を解除",
   "images_saved": "選択した画像が保存されました！",
   "select_multiple_images": "複数の画像を選択",
   "no_images_found": "指定されたディレクトリに画像が見つかりません。",
