修改語言包, 電壓電流功率spec管理面板移除Vin跟Iin UI
修改語言包, 電壓電流功率spec管理面板移除Vin跟Iin UI

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -10,8 +10,8 @@
   "hipot_test": "Hi-pot Test",
   "package_list": "Kit parts",
   "attachment": "Attachment",
-  "check_failed": "Inspection failed",
-  "check_failed_message": "The following items have not passed the check, there may be empty values or FAIL. \nplease correct them and submit again",
+  "check_failed": "Failed",
+  "check_failed_message": "Some items failed (null or fail detected). \nPlease check again before submitting.",
   "exit": "Exit",
   "close": "Close",
   "exit_confirm_title": "Confirm Exit",
