--- a/assets/translations/zh-TW.json
+++ b/assets/translations/zh-TW.json
@@ -21,8 +21,8 @@
   "please_input_sn": "請輸入序號",
   "cancel": "取消",
   "submit": "提交",
-  "check_failed": "檢查未通過",
-  "check_failed_message": "以下項目檢查未通過，可能有空值或FAIL。 \n請修正後再送出",
+  "check_failed": "不合格",
+  "check_failed_message": "以下項目檢驗未通過，可能有空值或FAIL， \n請確認後再送出。",
   "exit": "離開",
   "close": "關閉",
   "exit_confirm_title": "確認離開",
