--- a/assets/translations/ja-JP.json
+++ b/assets/translations/ja-JP.json
@@ -20,8 +20,8 @@
   "please_input_sn": "シリアル番号を入力してください",
   "cancel": "キャンセル",
   "submit": "送信",
-  "check_failed": "検査失敗",
-  "check_failed_message": "以下の項目はチェックに合格しませんでした。空の値またはFAILがある可能性があります。 \n修正して再度送信してください。",
+  "check_failed": "不合格",
+  "check_failed_message": "下記の項目を下記の項目で検査不備（未入力または不合格）が検出されました、 \n送信前に再度ご確認ください。",
   "exit": "終了",
   "close": "閉じる",
   "exit_confirm_title": "終了確認",
@@ -45,7 +45,7 @@
   "next_photo": "次の写真",
   "browse_photos": "写真を閲覧",
   "select_all": "すべての画像を選択",
-  "deselect_all": "すべての画像の選択を解除",
+  "deselect_all": "画像の選択を解除",
   "images_saved": "選択した画像が保存されました！",
   "select_multiple_images": "複数の画像を選択",
   "no_images_found": "指定されたディレクトリに画像が見つかりません。",
