拍照功能可以自動下一張, 上傳完成要點ok
拍照功能可以自動下一張, 上傳完成要點ok

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -42,7 +42,8 @@
   "recheck_cameras": "Re-check available cameras",
   "select_image": "Select Image",
   "take_photo": "Take Photo",
-  "next_photo": "Next Photo",
+  "next_photo": "Next",
+  "this_photo": "Retake",
   "browse_photos": "Browse Photos",
   "select_all": "Select all images",
   "deselect_all": "Deselect all images",
