--- a/assets/translations/vi-VN.json
+++ b/assets/translations/vi-VN.json
@@ -42,7 +42,8 @@
   "recheck_cameras": "Kiểm tra lại máy ảnh có sẵn",
   "select_image": "Chọn hình ảnh",
   "take_photo": "Chụp ảnh",
-  "next_photo": "Ảnh tiếp theo",
+  "next_photo": "Làm lại",
+  "this_photo": "bức ảnh này",
   "browse_photos": "Duyệt ảnh",
   "select_all": "chọn tất cả hình ảnh",
   "deselect_all": "bỏ chọn tất cả hình ảnh",
