--- a/assets/translations/zh-TW.json
+++ b/assets/translations/zh-TW.json
@@ -46,7 +46,8 @@
   "recheck_cameras": "重新檢查可用相機",
   "select_image": "選擇照片",
   "take_photo": "拍照",
-  "next_photo": "下一張照片",
+  "next_photo": "下一張",
+  "this_photo": "重拍",
   "browse_photos": "瀏覽照片",
   "select_all": "全選圖片",
   "deselect_all": "取消全選",
