--- a/assets/translations/ja-JP.json
+++ b/assets/translations/ja-JP.json
@@ -42,7 +42,8 @@
   "recheck_cameras": "利用可能なカメラを再確認",
   "select_image": "画像を選択",
   "take_photo": "写真を撮る",
-  "next_photo": "次の写真",
+  "next_photo": "次",
+  "this_photo": "再撮影",
   "browse_photos": "写真を閲覧",
   "select_all": "すべての画像を選択",
   "deselect_all": "画像の選択を解除",
