--- a/assets/translations/ja-JP.json
+++ b/assets/translations/ja-JP.json
@@ -21,7 +21,7 @@
   "cancel": "キャンセル",
   "submit": "送信",
   "check_failed": "不合格",
-  "check_failed_message": "下記の項目を下記の項目で検査不備（未入力または不合格）が検出されました、 \n送信前に再度ご確認ください。",
+  "check_failed_message": "下記の項目を下記の項目で検査不備、 \n送信前に再度ご確認ください。",
   "exit": "終了",
   "close": "閉じる",
   "exit_confirm_title": "終了確認",
