--- a/assets/translations/vi-VN.json
+++ b/assets/translations/vi-VN.json
@@ -21,7 +21,7 @@
   "cancel": "Hủy",
   "submit": "Gửi",
   "check_failed": "Kiểm tra không thành công",
-  "check_failed_message": "Các mục sau đây không vượt qua được kiểm tra, có thể có giá trị trống hoặc KHÔNG ĐẠT. \nvui lòng sửa lại và gửi lại",
+  "check_failed_message": "Các mục sau đây không vượt qua được kiểm tra, \nvui lòng sửa lại và gửi lại",
   "exit": "Thoát",
   "close": "Đóng",
   "exit_confirm_title": "Xác nhận thoát",
