--- a/assets/translations/zh-TW.json
+++ b/assets/translations/zh-TW.json
@@ -22,7 +22,7 @@
   "cancel": "取消",
   "submit": "提交",
   "check_failed": "不合格",
-  "check_failed_message": "以下項目檢驗未通過，可能有空值或FAIL， \n請確認後再送出。",
+  "check_failed_message": "以下項目檢驗未通過， \n請確認後再送出。",
   "exit": "離開",
   "close": "關閉",
   "exit_confirm_title": "確認離開",
